--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
     <section class="mixed">
         <div class="comment"> 
             <div class="img1">
-                <img src="/01_social_proof/index icture 3.jpg">
+                <img src="./image/index piture 1.jpg">
                     <h4>Colton Smith</h4>
                     <p class="verified">Verified Buyer</p>
                     <p class="quotes">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis et quos nulla repellat deleniti ipsa neque</p>
             </div>
             <div class="img2">
-                <img src="/01_social_proof/index piture 1.jpg">
+                <img src="./image/index icture 2.jpg">
                 <h4>Irene Roberts</h4>
                 <p class="verified">Verified Buyer</p>
                 <p class="quotes">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet omnis perspiciatis necessitatibus mollitia cum ad similique</p>
             </div>
             <div class="img3">
-                <img src="/01_social_proof/index icture 2.jpg">
+                <img src="./image/index icture 3.jpg">
                 <h4>Anne Wallace</h4>
                 <p class="verified">Verified Buyer</p>
                 <p class="quotes">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet omnis perspiciatis necessitatibus mollitia cum ad similique</p>
